--- a/index.html
+++ b/index.html
@@ -166,18 +166,15 @@
                 Nos gustaria que las personas sean capaces de empatizar con aquellas personas que lo sufran
             </p>
             <p>
-                Haga click en los links de abajo para descargar los simuladores
+                Haga click en los links de abajo para probar los simuladores
             </p>
-            <a href="games/Simulador de lectura.zip" download >
-                Descargar Simulador de Lectura
+            <a href="https://gx.games/games/xvxgt7/simulador-de-lectura/tracks/b3e51169-642c-4065-8688-6a92241e7f52">
+                Probar Simulador de Lectura
             </a>
             <br>
-            <a href="games/Simulador de escritura.zip" download >
-                Descargar Simulador de Escritura
+            <a href="https://gx.games/games/kf9wp8/simulador-de-escritura/tracks/11efeed5-be28-4c42-870b-3218a2e5cf89">
+                Probar Simulador de Escritura
             </a>
-            <p>
-                Para poder usar estos simuladores necesitara tener descargado el programa <a href="https://gamemaker.io/es/download" target="_blank">Gamemaker Studio</a>
-            </p>  
         </div>
        
         <br>
