--- a/index.html
+++ b/index.html
@@ -168,11 +168,11 @@
             <p>
                 Haga click en los links de abajo para probar los simuladores
             </p>
-            <a href="https://gx.games/games/xvxgt7/simulador-de-lectura/tracks/b3e51169-642c-4065-8688-6a92241e7f52">
+            <a href="https://gx.games/games/xvxgt7/simulador-de-lectura/tracks/b3e51169-642c-4065-8688-6a92241e7f52"target="_blank">
                 Probar Simulador de Lectura
             </a>
             <br>
-            <a href="https://gx.games/games/kf9wp8/simulador-de-escritura/tracks/11efeed5-be28-4c42-870b-3218a2e5cf89">
+            <a href="https://gx.games/games/kf9wp8/simulador-de-escritura/tracks/11efeed5-be28-4c42-870b-3218a2e5cf89"target="_blank">
                 Probar Simulador de Escritura
             </a>
         </div>
